tests/NormalTests/paczka1/small_fuzzy/75877843.err
Error in line 3: g5PdCuMPFy A494 4,5
Error in line 5: g5PdCuMPFy S366 71,6
Error in line 1: 2RYfFBj5 A234 84,1
